--- a/_includes/license.html
+++ b/_includes/license.html
@@ -1,5 +1,7 @@
-
+<!-- To edit the content of this module please check lang.yml -->
 <div class="column">
+  <!-- title -->
   <h2>{{ site.data[page.lang].lang["license"]["title"] }}</h2>
+  <!-- content -->
   <p>{{ site.data[page.lang].lang["license"]["license_content_html"] }}</p>
 </div>
