--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,13 +1,4 @@
 <!-- This finds the current page so it can be highlighted. -->
-<!-- {% for entry in site.data.lang.navigation %}
-{% capture fullurl %}{{ site.baseurl }}{{ entry.url }}{% endcapture %}
-    {% if fullurl == page.url %}
-        {% assign current_page = fullurl %}
-        {% break %}
-    {% elsif page.url contains fullurl %}
-        {% assign current_page = fullurl %}
-    {% endif %}
-{% endfor %} -->
 {% for entry in site.data[page.lang].navigation %}
 {% capture fullurl %}{{ site.baseurl }}{{ entry.url }}{% endcapture %}
     {% if fullurl == page.url %}
@@ -21,35 +12,17 @@
 <!-- Then we build the nav bar. -->
 <header>
     <div id="nav-container">    
-        <!-- <a href="{{ site.baseurl }}/"> -->
         <a href="{{ site.baseurl }}/{{ site.index[page.lang] }}">
             <img src="{{ site.baseurl }}/assets/OC-Logo-colortext.svg">
             <h1 class="site-name">
-              {{site.name}}
+              {{site.name}} <!-- to edit this check _config.yml -->
             </h1>
         </a>
+
         <nav>
-            <!-- hamburger button: IMPORTANT DO NOT MOVE-->
+            <!-- hamburger button for mobile view: IMPORTANT DO NOT MOVE-->
             <input type="checkbox" id="nav-trigger" class="nav-trigger" />
             <label for="nav-trigger"></label>
-
-            <!-- Language picker stuff: IMPORTANT DO NOT MOVE -->
-            <!-- <div id="lang-picker">
-                <input type="checkbox" id="lang-trigger">
-                <label for="lang-trigger">
-                    <li class="dropdown">
-                        <span class="lang">{{ site.active_lang }}</span>
-                        <span class="lang-icon"><img src="../assets/OC-lang.svg"></span>
-                        <ul class="dropdown-content">
-                            {% for tongue in site.languages %}
-                                <li>
-                                    <a {% if tongue == site.active_lang %}style="font-weight: bold;"{% endif %} href="{% if tongue == site.default_lang %} {{site.baseurl}}{{page.url}} {% else %} {{site.baseurl}}/{{ tongue }}{{page.url}} {% endif %}">{{ tongue }}</a>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </li>               
-                </label>
-            </div> -->
 
             <!-- Language picker stuff: IMPORTANT DO NOT MOVE -->
             <div id="lang-picker">
@@ -59,11 +32,6 @@
                         <span class="lang">{{ page.lang }}</span>
                         <span class="lang-icon"><img src="{{ site.baseurl }}/assets/OC-lang.svg"></span>
                         <ul class="dropdown-content">
-                            <!-- {% for tongue in site.languages %}
-                                <li>
-                                    <a {% if tongue == site.active_lang %}style="font-weight: bold;"{% endif %} href="{% if tongue == site.default_lang %} {{site.baseurl}}{{page.url}} {% else %} {{site.baseurl}}/{{ tongue }}{{page.url}} {% endif %}">{{ tongue }}</a>
-                                </li>
-                            {% endfor %} -->
                               {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
                               {% for post in posts %} <li><a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a></li> {% endfor %}
 
@@ -74,6 +42,7 @@
                 </label>
             </div>
 
+            <!-- populate nav menu -->
             <ul>
             {% for entry in site.data[page.lang].navigation %}
                 {% if entry.url == current_page %}
@@ -84,32 +53,23 @@
                 {% endif %}
                 {% assign sublinks = entry.sublinks %}
                 {% if sublinks %}
-
-                <!-- dropdown trigger for mobile: IMPORTANT DO NOT MOVE -->
-                <input type="checkbox" id="dropdown-trigger">
-                <label for="dropdown-trigger">
-                    <li class="dropdown {{ current }}">    
-                        <!-- <a href="{{ site.baseurl }}{{ entry.url }}"> -->{{ entry.title }}<!-- </a> -->
-                        <ul class="dropdown-content">
-                            {% for sublink in sublinks %}
-                            <li><a href="{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </li>
-                </label>
+                    <!-- dropdown trigger for mobile: IMPORTANT DO NOT MOVE -->
+                    <input type="checkbox" id="dropdown-trigger">
+                    <label for="dropdown-trigger">
+                        <li class="dropdown {{ current }}">    
+                            <!-- <a href="{{ site.baseurl }}{{ entry.url }}"> -->{{ entry.title }}<!-- </a> -->
+                            <ul class="dropdown-content">
+                                {% for sublink in sublinks %}
+                                    <li><a href="{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </li>
+                    </label>
                 {% else %}
-                <li class="{{ current }}"><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a></li>
+                    <li class="{{ current }}"><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a></li>
                 {% endif %}
             {% endfor %}
             </ul>
-
-            <!-- <div class="wrapper" style="text-align: right; line-height: 2em">
-              {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
-              {% for post in posts %} <a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a> {% endfor %}
-
-              {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
-              {% for page in pages %} <a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a> {% endfor %}
-            </div> -->
         </nav>
     </div>
 </header>
