--- a/_includes/release_notes.html
+++ b/_includes/release_notes.html
@@ -1,39 +1,19 @@
-<!-- <div class="column">
-  <h2>{{ site.data["lang"]["release_notes"]["title"] }}</h2>
-  <ul>
-    <li>{{ site.data["lang"]["release_notes"]["note_1"] }}</li>
-    <li>{{ site.data["lang"]["release_notes"]["note_2"] }}</li>
-    <li>{{ site.data["lang"]["release_notes"]["note_3"] }}</li>
-  </ul>
-  <p>
-    {% for item in site.data["lang"]["release_notes"]["more_link"] %}
-      <a href="{{ item.link_html }}"><em>{{ item.text }} &raquo;</em></a>
-    {% endfor %}
-  </p>
-</div> -->
-
-<!-- <div class="column">
-  <h2>Release 0.1 - 2016/09/12</h2>
-  <ul>
-    <li>Nota 1</li>
-    <li>Nota 2</li>
-    <li>Nota 3</li>
-  </ul>
-  <p>
-    <a href="{{ site.baseurl }}/about"><em>Maggiori informazioni &raquo;</em></a>
-  </p>
-</div> -->
-
+<!-- To edit the content of this module please check lang.yml -->
 <div class="column">
+  <!-- title -->
   <h2>{{ site.data[page.lang].lang["release_notes"]["title"] }}</h2>
+
+  <!-- content -->
   <ul>
     {% for item in site.data[page.lang].lang["release_notes"]["notes"] %}
       <li>{{ item.note }}</li>
     {% endfor %}
   </ul>
+
+  <!-- link to more -->
   <p>
     {% for item in site.data[page.lang].lang["release_notes"]["more_link"] %}
-      <a href="{{ item.link_html }}"><em>{{ item.text }} &raquo;</em></a>
+      <a href="{{ item.link }}"><em>{{ item.text }} &raquo;</em></a>
     {% endfor %}
   </p>
 </div>
