--- a/_includes/slick_slider.html
+++ b/_includes/slick_slider.html
@@ -8,6 +8,7 @@
     <img src="{{ site.baseurl }}/assets/images/usertest_procedura.jpg">
     <img src="{{ site.baseurl }}/assets/images/flier.jpg">
   </div>
-  <!-- <p>Research design prototyping and testing.</p> -->
-  <!-- <p>{{ site.data[page.lang].lang["slick"]["description"] }}</p> -->
+
+  <!-- slider caption -->
+  <p>{{ site.data[page.lang].lang["slick"]["description"] }}</p>
 </div>
