--- a/_includes/tutorials.html
+++ b/_includes/tutorials.html
@@ -1,63 +1,19 @@
-<!-- {% for item in site.data["lang"]["tutorials"]["tutorial_column"] %}
-  <div class="column tutorials">
-    <a href="{{ item.link }}">
-      <img src="{{ item.img_url }}">
-    </a>
-    <h3>{{ item.title }}</h3>
-    <p>{{ item.description }}</p>
-  </div>
-{% endfor %}
-
-{% for item in site.data["lang"]["tutorials"]["more_link"] %}
-  <span style="width:100%;text-align:center;margin-top:1rem;">
-    <a href="{{ item.link_html }}"><em>{{ item.text }} &raquo;</em></a>
-  </span>
-{% endfor %} -->
-
-
-<!-- <div class="column tutorials">
-  <a href="http://www.google.com">
-    <img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg">
-  </a>
-  <h3>Tutorial 1</h3>
-  <p>Questa è la descrizione del Turorial 1</p>
-</div>
-<div class="column tutorials">
-  <a href="http://www.google.com">
-    <img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg">
-  </a>
-  <h3>Tutorial 2/h3>
-  <p>Questa è la descrizione del Turorial 2/p>
-</div>
-<div class="column tutorials">
-  <a href="http://www.google.com">
-    <img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg">
-  </a>
-  <h3>Tutorial 3</h3>
-  <p>Questa è la descrizione del Turorial 3</p>
-</div>
-
-
-
-<span style="width:100%;text-align:center;margin-top:1rem;">
-  <a href="{{ site.baseurl }}/about"><em>Vedi tutti i tutorial &raquo;</em></a>
-</span> -->
+<!-- content -->
 <div class="row no-border">
-{% for item in site.data[page.lang].lang["tutorials"]["tutorial_column"] %}
-  <div class="column tutorials">
-    <a href="{{ item.link }}">
-      <img src="{{ item.img_url }}">
-    </a>
-    <h3>{{ item.title }}</h3>
-    <p>{{ item.description }}</p>
-  </div>
-{% endfor %}
+  {% for item in site.data[page.lang].lang["tutorials"]["tutorial_column"] %}
+    <div class="column tutorials">
+      <a href="{{ item.link }}">
+        <img src="{{ item.img_url }}">
+      </a>
+      <h3>{{ item.title }}</h3>
+      <p>{{ item.description }}</p>
+    </div>
+  {% endfor %}
 </div>
 
+<!-- link to more -->
 {% for item in site.data[page.lang].lang["tutorials"]["more_link"] %}
-  <!-- <span style="width:100%;text-align:center;margin-top:1rem;"> -->
   <p style="text-align: center;">
-    <a href="{{ item.link_html }}"><em>{{ item.text }} &raquo;</em></a>
+    <a href="{{ item.link }}"><em>{{ item.text }} &raquo;</em></a>
   </p>
-  <!-- </span> -->
 {% endfor %}
