refact and clean includes code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
   
   <body>
-    {% include return_to_top_button.html %}
+    <!-- {% include return_to_top_button.html %} -->
     {% include navigation.html %}
       
     <section class="main-content"> 
