--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,49 +2,37 @@
 layout: default
 type: archive
 published: true
-<!-- lang: site.data["active_lang"] -->
 ---
 
+<!-- title -->
 <div class="archive-description"> 
-  <!-- <h1 class="archive-title">{{ site.data["lang"]["category"]["title"] }} <em>"{{ page.category }}"</em></h1> -->
-  <!-- <h1 class="archive-title">Archivio delle news nella categoria <em>"{{ page.category }}"</em></h1> -->
   <h1 class="archive-title">{{ site.data[page.lang].lang["category"]["title"] }} <em>"{{ page.category }}"</em></h1>
-  <!-- {{ content }} -->
 </div>
 
+<!-- list posts in category -->
 <div class="wrap">
-{% if site.categories[page.category] %}
-  <div class="group-year">
-    {% assign posts=site.categories[page.category] | where:"lang", page.lang %}
-    {% for post in posts %}
-      {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-      {% unless year == this_year %}
-        {% assign year = this_year %}
-        <!-- <h3>{{ site.data["lang"]["category"]["year"] }} {{ year }}</h3> -->
-        <!-- <h3>Anno {{ year }}</h3> -->
-        <h3>{{ site.data[page.lang].lang["category"]["year"] }} {{ year }}</h3>
-      {% endunless %}
-      <article>
-        <span>» </span>
-        <time>
-          <span class="year">{{ post.date | date: "%Y" }}-</span>
-          <span class="month">{{ post.date | date: "%m" }}-</span>
-          <span class="day">{{ post.date | date: "%d" }}</span>
-        </time>
-        <span> | </span>
-        <h3><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h3>
-        <!-- {{ post.excerpt }} -->
-        <!-- <time>
+  {% if site.categories[page.category] %}
+    <div class="group-year">
+      {% assign posts=site.categories[page.category] | where:"lang", page.lang %}
+      {% for post in posts %}
+        {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+        {% unless year == this_year %}
+          {% assign year = this_year %}
+          <h3>{{ site.data[page.lang].lang["category"]["year"] }} {{ year }}</h3>
+        {% endunless %}
+        <article>
           <span>» </span>
-          <span class="month">{{ post.date | date: "%b" }}</span>
-          <span class="day">{{ post.date | date: "%d" }}</span>
-          <span class="year">{{ post.date | date: "%Y" }}</span>
-        </time> -->
-        
-      </article>
-    {% endfor %}
-  </div>
-{% else %}
-  <p>There are no posts in this category.</p>
-{% endif %}
+          <time>
+            <span class="year">{{ post.date | date: "%Y" }}-</span>
+            <span class="month">{{ post.date | date: "%m" }}-</span>
+            <span class="day">{{ post.date | date: "%d" }}</span>
+          </time>
+          <span> | </span>
+          <h3><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h3>        
+        </article>
+      {% endfor %}
+    </div>
+  {% else %}
+    <p>There are no posts in this category.</p>
+  {% endif %}
 </div>
