--- a/_layouts/projectPage.html
+++ b/_layouts/projectPage.html
@@ -1,76 +1,56 @@
-<!DOCTYPE html>
-<html lang="en-us">
+---
+layout: default
+---
 
-{% include head.html %}
+<!-- header -->
+<div class="row">
+  <h1>{{ page.title }} </h1>
+</div>
+<div class="row">
+  <h2>{{ page.subtitle }}</h2>
+  <p class="short-about">
+    {{ page.shortTex }}
+  </p>
+  <p>
+    {% for item in page.buttons %}
+      <a href="{{ item.link }} " class="btn">{{ item.text }} </a>
+    {% endfor %}
+  </p>
+</div>
 
+<!-- gallery and release info -->
+<div class="row">
+  <div class="column">
+    {% include params_slick_slider.html gallery=page.gallery%}
+  </div>
+  <div class="column">
+    <h2>{{ page.release }}</h2>
+    <ul>
+      {% for item in page.features %}
+        <li>{{ item }}</li>
+      {% endfor %}
+    </ul>
+    <p>
+      <a href="{{page.github_release_link}}"><em>{{ site.data[page.lang].lang["global"]["read_more"] }} &raquo;</em></a>
+    </p>
+  </div>
+</div>
 
-<body>
-{% include return_to_top_button.html %}
-{% include navigation.html %}
+<!-- page content -->
+<div class="row">
+  {{ content }}
+</div>
 
-  <!--main contents-->
-  <section class="main-content">
-
-    <!--row con titolo, sottotitolo, descrizione breve e link a github\-->
-    <div class="row">
-      <!-- <h1>{{ page.title[lang] }} </h1> -->
-      <h1>{{ page.title }} </h1>
-    </div>
-    <div class="row">
-      <h2>{{ page.subtitle }}</h2>
-      <p class="short-about">
-        {{ page.shortTex }}
-      </p>
-      <p>
-        {% for item in page.buttons %}
-        <a href="{{ item.link }} " class="btn">{{ item.text }} </a> {% endfor %}
-      </p>
-    </div>
-
-    <!--row con galleria foto e lista features-->
-    <div class="row">
-      <div class="column">
-        {% include params_slick_slider.html gallery=page.gallery%}
-      </div>
-      <div class="column">
-        <h2>{{ page.release }}</h2>
-        <ul>
-          {% for item in page.features %}
-          <li>{{ item }}</li>
-          {% endfor %}
-        </ul>
-        <!-- <p>
-          <a href="{{page.github_release_link}}">
-              <em>More details »</em>
-            </a>
-        </p> -->
-      </div>
-    </div>
-    <!--row con content in markdown-->
-    <div class="row">
-      {{ content }}
-    </div>
+<!-- page related news -->
+<div class="row">
+  {% include news.html category=page.newsCategory %}
+</div>
 
 
-    <!--row con contenuti relativi alla sezione-->
-    <div class="row">
-      {% include news.html category=page.newsCategory%}
-    </div>
+<!-- Home page comments -->
+<div class="notecomments">
+  {% include disqus.html %}
+</div>
 
 
-    <!-- Home page comments -->
-    <div class="notecomments">
-      {% include disqus.html %}
-    </div>
-
-
-    {% include footer.html %}
-  </section>
-
-  {% include jquery.html %}
-  <!-- {% include return_to_top.html %} -->
-  {% include nav_shrink.html %}
-  {% include slick.html %}
-</body>
-
-</html>
+   
