--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -24,8 +24,8 @@
             <input type="checkbox" id="nav-trigger" class="nav-trigger" />
             <label for="nav-trigger"></label>
 
-            <!-- Language picker stuff: IMPORTANT DO NOT MOVE -->
-            <!-- <div id="lang-picker">
+            <!-- Language picker stuff: IMPORTANT DO NOT MOVE
+            <div id="lang-picker">
                 <input type="checkbox" id="lang-trigger">
                 <label for="lang-trigger">
                     <li class="dropdown">
@@ -40,8 +40,8 @@
                         </ul>
                     </li>
                 </label>
-            </div> -->
-
+            </div>
+-->
             <!-- populate nav menu -->
             <ul>
             {% for entry in site.data[page.lang].navigation %}
